<resources>
    <string name="app_name">LightImmersionMode</string>
    <string name="normal_activity">normal activity</string>
    <string name="changeconfig">activity changeConfig</string>
    <string name="fragment">in fragment</string>
    <string name="first_view_text">first</string>
    <string name="second_view_text">second</string>
    <string name="third_view_text">third</string>
    <string name="first_fragment">fragment A\n\nchange color in parent activity</string>
    <string name="second_fragment">fragment B\n\nchange color in parent activity</string>
    <string name="third_fragment">fragment C\n\nchange color in parent activity</string>
    <string name="disable_mode">Disable ImmersionMode</string>
    <string name="status_gone">make status GONE</string>
    <string name="make_gone">GONE</string>
    <string name="make_visible">VISIBLE</string>
    <string name="note">This activity is not extend from BaseActivity, can not change statusBar</string>
    <string name="disable_note">This activity extend from BaseActivity, but disable Immersionmode</string>
    <string name="gone_note">this function only work blow sdk 21!!!!</string>
</resources>
