<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="spa.lyh.cn.lightimmersionmode.MainActivity">
    <View
        android:id="@+id/vvv"
        android:background="@color/bar_color"
        android:layout_width="match_parent"
        android:layout_height="24dp"/>
    <TextView
        android:id="@+id/ttt"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/vvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/note"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ttt">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <Button
                android:id="@+id/normalactivity"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/normal_activity"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/changeconfig"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/changeconfig"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/fragment"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/fragment"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/disable"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/disable_mode"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/gone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/status_gone"
                android:onClick="onClick"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
